kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapiexample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restapiexample
  template:
    metadata:
      labels:
        app: restapiexample
    spec:
      containers:
        - name: app
          image: shashankkuchibhotla/restapiexample
          #imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
# ... Service YAML definition
apiVersion: v1
kind: Service
metadata:
  name: restapiexample
spec:
  #type: NodePort
  selector:
    app: restapiexample
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
