kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: restapiexample
                port:
                  number: 8080
          - path: /db
            pathType: Prefix
            backend:
              service:
                name: mongo
                port:
                  number: 27017
